# workspace

./: .gitignore  .gitmodules  README.md
Autotools/: HowTo.txt  README.md
Autotools/Recurse/: Makefile  Makefile.in  config.h  config.status  configure  configure.in
Autotools/Recurse/autom4te.cache/: output.0  requests  traces.0  traces.1
Autotools/Recurse/src/: Main.c  Makefile  Makefile.am  Makefile.in  hello
Autotools/Recurse/src/.deps/: Hello.Po  Main.Po
Autotools/Recurse/src/lib/: Hello.h
Autotools/Simple/: Makefile.in  configure  configure.in
Autotools/Simple/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
Autotools/Simple/src/: Hello.c  Main.c  Makefile.am  Makefile.in
BrainFuck/: A.bf
C/: Directory.c
C#/: DictionaryJoin.cs  Hello.cs  VariantGeneric.cs
C++/: CPPLibs
COBOL/: Base.cob  Variable.cob
CSharp/: CSharp_Iterator.cs  Linq_Flatten.cs
Clojure/: eval.clj  function.clj  hash_map.clj  hello.clj  import.clj  list.clj  literals.clj  set.clj
Coder/: Archiver.java  README.md
Coq/: README.md  first_proof.v  hello.v
Elm/: .gitignore  elm-package.json  record.elm
English/: ujm_fix.txt
Erlang/: hello.erl
HomuHomu/: homuhomu.homu  ww.homu  wxy.homu  z.homu
Idris/: Makefile
Java/: FileVistorImpl.java
JavaScript/: functional.js  throw_error.js
Lua/: helloworld.lua
MicrosoftSQLServer/: CreateDatabaseSql.sql  CreateTableSql.sql  DropDatabaseSql.sql
NeoVim_script/: call.vim  jobcontrol_simply.vim  jobcontrol_test.vim  timer_test.vim
PHP/: call_user_func.php
Python/: Basics.py  README.md  hello.py
(+1653 files in other folders)
